--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
     src: url("assets/fonts/ROBOTO-REGULAR.TTF") format("opentype");
 }
 
+@font-face {
+    font-family: "Gothic";
+    src: url("assets/fonts/GOTHIC.TTF") format("opentype");
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -21,10 +26,13 @@ h1 {
 
 h1, h2, h3, h4, h5 {
     text-align: center;
+    font-family: "Gothic", serif;
     text-transform: uppercase;
+    font-weight: bold;
 }
 
 .content-container {
+    padding-top: 100px;
     max-width: 1080px;
     display: flex;
     flex-direction: column;
@@ -34,30 +42,85 @@ h1, h2, h3, h4, h5 {
 }
 
 .welcome-header {
+    color: white;
+    z-index: 9999;
+    font-size: 100px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     text-transform: uppercase;
     position: relative;
-    bottom: 70px;
-    align-items: center;
+    text-align: center;
+    bottom: 10%;
+    /*bottom: 70px;*/
 }
 
-.welcome-header span:first-of-type {
-    font-size: 45px;
-}
+.welcome-header:after{
+    z-index: -1;
+    position: absolute;
+    bottom: 6px;
+    right: 123px;
+    content: "";
+    height: 106px;
+    background-color: #ff0000;
+    width: 230px;
+    border-radius: 10px;
+    /*right: 108px;*/
+    /*width: 254px;*/
 
-.welcome-header span:last-of-type {
-    font-size: 57px;
 }
-
 
 .welcome-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-size: cover;
-    background: url("assets/png/main-picture.svg") no-repeat;
+    background-image: url("assets/png/fon.jpg");
     height: 100vh;
     width: 100%;
-    background-position: top center;
+    font-family: "Gothic", serif;
+}
+
+.welcome-image:before{
+    position: absolute;
+    left: 0;
+    content: "";
+    height: 100vh;
+    background-color: #000000;
+    opacity: 0.59;
+    width: 100%;
+}
+
+.welcome-image span{
+    color: #ffffff;
+    font-size: 38px;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 120px;
+}
+
+.arrow-down{
+    z-index: 9999;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.arrow-animate {
+    animation: animation-arrow 1s forwards infinite; /* add "forwards" here to stop the animation at end-frame */
+    bottom: 90px;
+}
+
+@keyframes animation-arrow {
+    /* You can use percent to target steps during your animation:
+       here it moves to the center at 10% animation duration and gets bigger    at 100 % animation duration
+     */
+    66% {
+        bottom: 95px;
+    }
+    100% {
+        bottom: 90px;
+    }
 }
 
 /*CIRCLES-CONTAINER*/
@@ -73,20 +136,18 @@ h1, h2, h3, h4, h5 {
     background-repeat: no-repeat;
 }
 
-.circles-image {
-
-}
-
 .circle {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    cursor: pointer;
 }
 
 .circle .circle-span {
     font-size: 80px;
+    font-weight: bold;
 }
 
 .first-circle .circle-span {
@@ -117,23 +178,28 @@ h1, h2, h3, h4, h5 {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .first-circle:hover > .hover-elements {
     display: flex !important;
-    right: 8px;
+    /*right: 8px;*/
+    right: -9px;
     opacity:1;
 }
 
 .second-circle:hover > .hover-elements {
     display: flex !important;
-    right: 10px;
+    /*right: 10px;*/
+    right: -4px;
     opacity: 1;
 }
 
 .third-circle:hover > .hover-elements {
     display: flex !important;
-    left: -7px;
+    /*left: -7px;*/
+    left: -23px;
     opacity: 1;
 }
 
@@ -147,7 +213,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .hover-elements .item {
-    padding: 30px;
+    padding: 35px;
 }
 
 .hover-elements .item:first-of-type {
@@ -165,8 +231,10 @@ h1, h2, h3, h4, h5 {
 .hover-elements .item:first-of-type span{
     position: absolute;
     transform: rotate(-40deg);
-    left: 33px;
-    top: 78px;
+    /*left: 33px;*/
+    /*top: 78px;*/
+    left: 43px;
+    top: 84px;
 }
 
 .hover-elements .item span{
@@ -177,8 +245,10 @@ h1, h2, h3, h4, h5 {
 .hover-elements .item:last-of-type span{
     position: absolute;
     transform: rotate(40deg);
-    top: 74px;
-    left: 3px;
+    /*top: 74px;*/
+    /*left: 3px;*/
+    top: 92px;
+    left: -11px;
 }
 
 
@@ -236,6 +306,7 @@ h1, h2, h3, h4, h5 {
     text-transform: uppercase;
     padding: 70px 90px 40px;
     font-size: 24px;
+    font-weight: bold;
 }
 
 .calc-body {
@@ -417,9 +488,10 @@ h1, h2, h3, h4, h5 {
 
 
 .line-elements {
+    z-index: -1;
     position: relative;
     padding: 30px 0;
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: space-between;
 }
@@ -509,6 +581,7 @@ h1, h2, h3, h4, h5 {
     display: table;
     width: 1080px;
     border-collapse: collapse;
+    table-layout: fixed;
 }
 
 .pink-table tr:first-of-type {
@@ -540,6 +613,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .pink-table p {
+    min-height: 64px;
     font-size: 16px;
     line-height: 16px;
     color: #ffffff;
@@ -646,6 +720,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .advertising-button {
+    font-weight: bold;
     background-color: #af0808;
     color: #ffffff;
     text-transform: uppercase;
@@ -662,9 +737,9 @@ h1, h2, h3, h4, h5 {
     vertical-align: baseline;
     text-align: center;
     margin: 0;
-    min-width: 64px;
-    line-height: 36px;
-    padding: 0 16px;
+    min-width: 80px;
+    line-height: 50px;
+    padding: 0 50px;
     border-radius: 4px;
     overflow: visible;
     transform: translate3d(0, 0, 0);
@@ -774,27 +849,40 @@ h1, h2, h3, h4, h5 {
 /*FOOTER*/
 .footer {
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     width: 100vw;
     background-color: #8a0303;
-    padding: 50px 20px 0;
-    min-height: 100vh;
-
+    padding: 50px 0;
+    min-height:700px;
 }
+
+/*.footer:after{*/
+    /*content: "";*/
+    /*width: 100%;*/
+    /*height: 100vh;*/
+    /*background:url("assets/png/вап.png") no-repeat -30px -50px fixed;*/
+    /*top: 10px;*/
+    /*right: 5px;*/
+    /*position: absolute;*/
+    /*display: inline-block;*/
+/*}*/
 
 .background-logo {
     position: absolute;
-    /*bottom: 0;*/
+    bottom: 0;
     z-index: 1;
     display: flex;
     justify-content: center;
+    /*background: url("assets/png/вап.png");*/
 }
 
 
 .footer-header {
     color: #ffffff;
     flex: 1;
+    min-width: 400px;
 }
 
 .empty {
@@ -804,9 +892,10 @@ h1, h2, h3, h4, h5 {
 
 .footer input {
     margin: 10px;
-    border-radius: 10px;
+    border-radius: 4px;
     padding: 5px 8px;
     border: none;
+    min-width: 400px;
 }
 
 .row {
@@ -814,6 +903,7 @@ h1, h2, h3, h4, h5 {
     width: 100%;
     flex-direction: row;
     z-index: 3;
+    flex-wrap: wrap-reverse;
 }
 
 .left-part-footer {
@@ -824,6 +914,13 @@ h1, h2, h3, h4, h5 {
     min-height: 350px;
     max-height: 350px;
     justify-content: space-around;
+}
+
+.right-part-footer{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .left-part-footer input {
@@ -840,9 +937,11 @@ h1, h2, h3, h4, h5 {
     flex: 1;
     display: flex;
     justify-content: center;
+    padding: 20px;
 }
 
 .footer-button, .send-button {
+    font-weight: bold;
     background-color: #ffffff;
     color: #af0808;
     text-transform: uppercase;
@@ -875,11 +974,6 @@ h1, h2, h3, h4, h5 {
     left: 120px;
     font-size: 22px;
     text-transform: uppercase;
-}
-
-.right-part-footer {
-    flex: 1;
-    /*background: url("assets/png/map.png");*/
 }
 
 
@@ -974,7 +1068,7 @@ h1, h2, h3, h4, h5 {
     opacity: 0.3!important;
 }
 
-.keyses-class .slick-slide, {
+.keyses-class .slick-slide {
     display: flex !important;
 }
 
@@ -992,4 +1086,21 @@ h1, h2, h3, h4, h5 {
 .slick-dots li.slick-active button:before{
     color: #8a0303!important;
     opacity: 1!important;
+}
+
+/*SCROLL STYLING*/
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: grey;
+    border-radius: 10px;
 }
