--- a/styles.css
+++ b/styles.css
@@ -53,15 +53,15 @@ h1, h2, h3, h4, h5 {
     /*bottom: 70px;*/
 }
 
-.welcome-header:after{
+.welcome-header:after {
     z-index: -1;
     position: absolute;
     bottom: 6px;
-    right: 123px;
+    right: 124px;
     content: "";
     height: 106px;
     background-color: #ff0000;
-    width: 230px;
+    width: 226px;
     border-radius: 10px;
     /*right: 108px;*/
     /*width: 254px;*/
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5 {
     font-family: "Gothic", serif;
 }
 
-.welcome-image:before{
+.welcome-image:before {
     position: absolute;
     left: 0;
     content: "";
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5 {
     width: 100%;
 }
 
-.welcome-image span{
+.welcome-image span {
     color: #ffffff;
     font-size: 38px;
     text-transform: uppercase;
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5 {
     bottom: 120px;
 }
 
-.arrow-down{
+.arrow-down {
     z-index: 9999;
     position: relative;
     display: flex;
@@ -186,7 +186,7 @@ h1, h2, h3, h4, h5 {
     display: flex !important;
     /*right: 8px;*/
     right: -9px;
-    opacity:1;
+    opacity: 1;
 }
 
 .second-circle:hover > .hover-elements {
@@ -228,7 +228,7 @@ h1, h2, h3, h4, h5 {
     top: 40px;
 }
 
-.hover-elements .item:first-of-type span{
+.hover-elements .item:first-of-type span {
     position: absolute;
     transform: rotate(-40deg);
     /*left: 33px;*/
@@ -237,12 +237,12 @@ h1, h2, h3, h4, h5 {
     top: 84px;
 }
 
-.hover-elements .item span{
+.hover-elements .item span {
     position: absolute;
     left: 34%;
 }
 
-.hover-elements .item:last-of-type span{
+.hover-elements .item:last-of-type span {
     position: absolute;
     transform: rotate(40deg);
     /*top: 74px;*/
@@ -743,7 +743,7 @@ h1, h2, h3, h4, h5 {
     border-radius: 4px;
     overflow: visible;
     transform: translate3d(0, 0, 0);
-    transition: background .4s cubic-bezier(.25, .8, .25, 1), box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
+    transition: 0.3s linear;
 }
 
 /*KEYSES*/
@@ -853,20 +853,24 @@ h1, h2, h3, h4, h5 {
     flex-direction: column;
     align-items: center;
     width: 100vw;
-    background-color: #8a0303;
+    /*background-color: #8a0303;*/
     padding: 50px 0;
-    min-height:700px;
+    /*min-height:700px;*/
+    background-color: black;
+    font-family: 'Gothic', serif;
+    margin-top: 20px;
+
 }
 
 /*.footer:after{*/
-    /*content: "";*/
-    /*width: 100%;*/
-    /*height: 100vh;*/
-    /*background:url("assets/png/вап.png") no-repeat -30px -50px fixed;*/
-    /*top: 10px;*/
-    /*right: 5px;*/
-    /*position: absolute;*/
-    /*display: inline-block;*/
+/*content: "";*/
+/*width: 100%;*/
+/*height: 100vh;*/
+/*background:url("assets/png/вап.png") no-repeat -30px -50px fixed;*/
+/*top: 10px;*/
+/*right: 5px;*/
+/*position: absolute;*/
+/*display: inline-block;*/
 /*}*/
 
 .background-logo {
@@ -890,13 +894,13 @@ h1, h2, h3, h4, h5 {
     min-width: 700px;
 }
 
-.footer input {
-    margin: 10px;
-    border-radius: 4px;
-    padding: 5px 8px;
-    border: none;
-    min-width: 400px;
-}
+/*.footer input {*/
+/*margin: 10px;*/
+/*border-radius: 4px;*/
+/*padding: 5px 8px;*/
+/*border: none;*/
+/*min-width: 400px;*/
+/*}*/
 
 .row {
     display: flex;
@@ -912,24 +916,83 @@ h1, h2, h3, h4, h5 {
     flex-direction: column;
     align-items: center;
     min-height: 350px;
-    max-height: 350px;
+    /*max-height: 350px;*/
     justify-content: space-around;
+    position: relative;
 }
 
-.right-part-footer{
+.right-part-footer {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.left-part-footer input {
-    width: 70%;
+.footer-input {
+    padding: 5px 8px;
+    border: none;
+    min-width: 500px;
+    line-height: 40px;
+    font-size: 22px;
+    min-height: 45px;
+    border-radius: 40px;
 }
 
-.left-part-footer input:last-of-type {
-    min-height: 150px;
+.send-label {
+    display: flex;
+    position: absolute;
+    right: 4px;
+    color: #ffffff;
+    background: #af0808;
+    border-radius: 33px;
+    padding: 12px 16px;
+    font-size: 18px;
+    bottom: 4px;
+    text-transform: uppercase;
+    transition: 0.3s linear;
 }
+
+
+.icon-container{
+    display: flex;
+    background-color: #af0808;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    height: 50px;
+    transition: 0.3s linear;
+}
+
+.icon-container:hover,.send-label:hover,.advertising-button:hover{
+    background-color: #ff0000;
+    cursor: pointer;
+}
+
+.float-container{
+    position: relative;
+}
+
+label {
+    position: absolute;
+}
+
+.social-icons-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.social-icon{
+    width: 50px;
+    padding: 3px;
+}
+
+.left-part-footer input {
+    width: 90%;
+}
+
+/*.left-part-footer input:last-of-type {*/
+/*min-height: 150px;*/
+/*}*/
 
 .footer-button-container {
     position: relative;
@@ -1021,7 +1084,7 @@ h1, h2, h3, h4, h5 {
     right: 30px;
 }
 
-.slick-arrow-right{
+.slick-arrow-right {
     position: absolute;
     top: 380px;
     left: 30px;
@@ -1029,7 +1092,7 @@ h1, h2, h3, h4, h5 {
     cursor: pointer;
 }
 
-.slick-arrow-left{
+.slick-arrow-left {
     position: absolute;
     top: 380px;
     right: 30px;
@@ -1053,39 +1116,46 @@ h1, h2, h3, h4, h5 {
     justify-content: center !important;
     align-items: center !important;
 }
-.slick-prev{
-  left: -50px!important;
+
+.slick-prev {
+    left: -50px !important;
 }
+
 .slick-prev:before,
 .slick-next:before {
     font-size: 45px !important;
     opacity: 1 !important;
     color: #8a0303 !important;
+    transition: 0.3s linear;
+}
+
+.slick-prev:hover:before, .slick-next:hover:before{
+    color: #ff0000 !important;
 }
 
 .slick-disabled {
     transition: 0.3s linear;
-    opacity: 0.3!important;
+    opacity: 0.3 !important;
 }
 
 .keyses-class .slick-slide {
     display: flex !important;
 }
 
-.advertising-format-class .slick-slide{
+.advertising-format-class .slick-slide {
     display: flex !important;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.slick-dots li button:before{
-    font-size: 16px!important;
+.slick-dots li button:before {
+    font-size: 16px !important;
 }
 
-.slick-dots li.slick-active button:before{
-    color: #8a0303!important;
-    opacity: 1!important;
+.slick-dots li.slick-active button:before {
+    color: #8a0303 !important;
+    opacity: 1 !important;
 }
 
 /*SCROLL STYLING*/
