--- a/styles.css
+++ b/styles.css
@@ -896,7 +896,7 @@ h1, h2, h3, h4, h5 {
 
 .footer-header {
     color: #ffffff;
-    flex: 1;
+    /*flex: 1;*/
     min-width: 400px;
 }
 
@@ -927,15 +927,16 @@ h1, h2, h3, h4, h5 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 350px;
+    /*min-height: 350px;*/
     /*max-height: 350px;*/
-    justify-content: space-around;
+    justify-content: space-between;
     position: relative;
 }
 
 .right-part-footer {
     flex: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
